Bug 89027 - Test 4 of test-module fails with "make check"
Summary: Test 4 of test-module fails with "make check"
Status: RESOLVED FIXED
Alias: None
Product: p11-glue
Classification: Unclassified
Component: p11-kit (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Stef Walter
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-08 15:02 UTC by andreas
Modified: 2016-09-04 13:56 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments
config.log (86.26 KB, text/plain)
2015-02-08 15:02 UTC, andreas
Details
test: Make test-module work --without-trust-module (1.22 KB, patch)
2016-08-12 12:38 UTC, Daiki Ueno
Details | Splinter Review

Description andreas 2015-02-08 15:02:34 UTC
Created attachment 113259 [details]
config.log

Hello,

when running "make check" of version 0.22.1, one test fails as follows:

not ok 4 /module/initialize-multi
# assertion failed (count > 0): (0 > 0)
# in test_multi_initialize() at test-module.c:230
test-module: trust/test-module.c:328: test_get_token_info: Assertion `count == 3' failed.
/bin/bash: line 5: 14650 Aborted                 ${dir}$tst
FAIL: test-module

I ran ./configure --without-trust-paths ; config.log is attached.

I am using the packages currently available on git master of GNU Guix, that is,

glibc 2.20
libffi 3.1
libtasn1 4.2

Andreas
Comment 1 Daiki Ueno 2016-08-12 12:38:43 UTC
Created attachment 125730 [details] [review]
test: Make test-module work --without-trust-module

The test-module program currently depends on TRUST_PATHS, which is
determined by the configure script and normally points to a resource
outside of the build tree.  To make the test system-independent, use
a crafted path for testing.
--
This still happens with the latest git master - here is a trivial patch.
Comment 2 Stef Walter 2016-09-04 13:56:12 UTC
Attachment 125730 [details] pushed as d74e29c - test: Make test-module work --without-trust-module

Nice. Merged.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.