test: Make test-module work --without-trust-module

The test-module program currently depends on TRUST_PATHS, which is
determined by the configure script and normally points to a resource
outside of the build tree.  To make the test system-independent, use
a crafted path for testing.

https://bugs.freedesktop.org/show_bug.cgi?id=89027